[FIX] Add required args to 1.16.5 forge